frown (0.6.1-10) UNRELEASED; urgency=low

  * Use source format 3.0 (quilt).
  * Fix "Package should be arch all" changing Architecture: to all
    (Closes: #517603)
  * debian/control: Addopt for the Debian Haskell Group.
  * Remove old upstream homepage.
  * debian/control: Bump Standards-Version to 3.8.4, no changes needed.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 05 Mar 2010 20:53:19 -0300

frown (0.6.1-9) unstable; urgency=low

  * debian/control:
    - Drop all build dependencies on tetex packages as tetex is removed.
    - Bump Standards-Version to 3.8.0
  * debian/frown-doc.doc-base:
    - Change the section from Programming to Programming/Haskell as
      suggested by the doc-base manual.
  * debian/README.source: Added.

 -- Arjan Oosting <arjan@debian.org>  Mon, 07 Jul 2008 09:36:42 +0200

frown (0.6.1-8) unstable; urgency=low

  * Fix lintian warnings:
    - Replace apps/devel section with Programming section to fix lintian
      warning "doc-base-unknown-section frown-guide:6 apps/devel."
    - Split of the documentation into a separate frown-doc package to fix
      lintian warning "arch-dep-package-has-big-usr-share 1648kB 52%"
  * debian/control:
    - Let the Vcs-* fields point to the trunk branch.
    - Add doc-base to the Suggests of frown-doc.

 -- Arjan Oosting <arjan@debian.org>  Sun, 16 Mar 2008 22:11:28 +0100

frown (0.6.1-7) unstable; urgency=low

  * debian/control:
    - Replace XS-Vcs-* fields with the new official Vcs-* fields.
    - Add Homepage field.
    - Bump Standards-Version to 3.7.3. No changes needed.

 -- Arjan Oosting <arjan@debian.org>  Tue, 08 Jan 2008 07:12:51 +0100

frown (0.6.1-6) unstable; urgency=low

  * debian/control:
    - Add XS-Vcs-Browser field.
    - Change build dependencies to prefer to build against texlive instead
      of tetex.
  * debian/rules: enclose paths in double quotes because directories can
    contain spaces.
