@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Debian Haskell Group <pkg-haskell-maintainers@lists.alioth.debian.org>
 Uploaders: Marco Túlio Gontijo e Silva <marcot@debian.org>
-Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 5), ghc6,
+Build-Depends: cdbs, debhelper (>= 5), ghc6,
  hevea, lhs2tex, texlive-latex-base, texlive-latex-recommended,
  texlive-latex-extra, texlive-math-extra
 Standards-Version: 3.8.4
