@@ -6,6 +6,7 @@ frown (0.6.1-10) UNRELEASED; urgency=low
   * debian/control: Addopt for the Debian Haskell Group.
   * Remove old upstream homepage.
   * debian/control: Bump Standards-Version to 3.8.4, no changes needed.
+  * Remove control.in.
 
  -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 05 Mar 2010 20:53:19 -0300
 
